Fix: for modal window scroll issue on small devices

--- a/assets/sass/patterns/atoms/modal-window.scss
+++ b/assets/sass/patterns/atoms/modal-window.scss
@@ -17,7 +17,7 @@
   padding: 36px;
 
   @media only all and (min-width: #{get-rem-from-px($bkpt-site--small)}em) {
-    margin: 180px 24px 24px;
+    margin: 24px;
   }
 
   @media only all and (min-width: #{get-rem-from-px($bkpt-site--medium + 48)}em) {
@@ -104,6 +104,7 @@
 
 .modal-content__show {
   opacity: 1;
+  overflow-y: scroll;
   visibility: visible;
   z-index: 1000;
 }
